--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>Tanu Kumari - Portfolio</header>
+    <header>Tannu Kumari - Portfolio</header>
     
     <div class="image-section">
         <img src="profile.png" alt="Tanu Kumari">
